# web-organizer

./: README.md
docs/: project_info.md
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/controllers/: home.rs
server/src/routes/: mod.rs
server/src/utils/: clap.rs
web/: Cargo.toml  README.md
