[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# server framework
axum = { version = "0.7.7", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
# execution commands
clap = { version = "4.5.21", features = ["derive"] }
# async runtime
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
# logs
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
